tests/ui/06-params.stderr
error: required a string literal
 --> $DIR/06-params.rs:4:18
  |
4 | #[rye(rye_path = 10)]
  |                  ^^

error: duplicated parameter
 --> $DIR/06-params.rs:9:7
  |
9 | #[rye(rye_path = "rye")]
  |       ^^^^^^^^^^^^^^^^

error: unknown parameter name
  --> $DIR/06-params.rs:13:7
   |
13 | #[rye(the_quick_fox = "lazy")]
   |       ^^^^^^^^^^^^^
